--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="sezione_sottotitolo"></div>
 
                 <!-- Florian dice che in un div in cui ci sono elementi floattanti ed elementi non floattanti è consigliato racchiudere gli elementi floattanti in un div interno da quelli non floattanti -->
-                <div class="row clearfix"> <!-- le classi "row" vengono utilizzate per le classi contententi elementi floattanti -->
+                <div class="row"> <!-- le classi "row" vengono utilizzate per le classi contententi elementi floattanti -->
                     <div class="colonna_laterali"></div>
 
                     <div class="colonna_centrale"></div>
